
[metadata]
name             = pymodbus
version          = attr: pymodbus.__version__
author           = "Galen Collins, Jan Iversen"
maintainer       = "dhoomakethu, janiversen"
license          = BSD-3-Clause
platforms        = 'Linux', 'Mac OS X', 'Win'
description      = A fully featured modbus protocol stack in python
keywords         = modbus, asyncio, scada, client, server, simulator
long_description = file: README.rst
url              = https://github.com/pymodbus-dev/pymodbus/
classifiers      =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: OS Independent
    Operating System :: Microsoft
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Networking
    Topic :: Utilities
project_urls     =
    Source Code  = https://github.com/pymodbus-dev/pymodbus
    Bug Reports  = https://github.com/pymodbus-dev/pymodbus/issues
    Docs: Dev    = https://pymodbus.readthedocs.io/en/latest/?badge=latest
    Discord      = https://discord.gg/vcP8qAz2



[options]
packages             = find:
include_package_data = True
zip_safe             = True
python_requires      = >=3.8.0
#install_requires    --> setup.py
#extras_require      --> setup.py
#cmdclass            --> setup.py


[options.exclude_package_data]
'' =
    examples
    test
    tools
    doc


[options.entry_points]
console_scripts =
    pymodbus.console = pymodbus.repl.client.main:main
    pymodbus.server  = pymodbus.repl.server.main:app
    pymodbus.simulator = pymodbus.server.simulator.main:main


[options.packages.find]
include = pymodbus*


[pylint.master]

# Add files or directories matching the regex patterns to the ignore-list.
ignore-paths=
    pymodbus/transport/serial_asyncio,
    doc

# Files or directories matching the regular expression patterns are skipped.
ignore-patterns=^\.#

# Pickle collected data for later comparisons.
persistent=no

# List of plugins
load-plugins=
    pylint.extensions.bad_builtin,
    pylint.extensions.check_elif,
    pylint.extensions.code_style,
    pylint.extensions.comparetozero,
    pylint.extensions.comparison_placement,
    pylint.extensions.confusing_elif,
    pylint.extensions.docparams,
    pylint.extensions.docstyle,
    pylint.extensions.emptystring,
    pylint.extensions.eq_without_hash,
    pylint.extensions.for_any_all,
    pylint.extensions.overlapping_exceptions,
    pylint.extensions.private_import,
    pylint.extensions.set_membership,
    pylint.extensions.typing,
# NOT WANTED:
#     pylint.extensions.mccabe,  (replaced by ruff)
#     pylint.extensions.broad_try_clause,
#     pylint.extensions.consider_ternary_expression,
#     pylint.extensions.empty_comment,
#     pylint.extensions.redefined_variable_type,
#     pylint.extensions.while_used,

# Use multiple processes to speed up Pylint, 0 will auto-detect.
jobs=0

# Minimum supported python version
py-version = 3.8

[pylint.messages_control]

# Enable/Disable the message/report/category/checker with the given id(s).
enable=all
disable=
    duplicate-code,     # TBD
    file-ignored,       # ONLY to be used with extreme care.
    format,             # NOT wanted, handled by black
    locally-disabled,   # NOT wanted
    suppressed-message, # NOT wanted

[pylint.reports]

# Set the output format.
output-format=text

[pylint.logging]

# The type of string formatting that logging methods do.
logging-format-style=new

[pylint.similarities]

# Ignore imports when computing similarities.
ignore-imports=no

# Signatures are removed from the similarity computation
ignore-signatures=no

[pylint.variables]

# A regular expression matching the name of dummy variables
dummy-variables-rgx=

[pylint.format]

# Maximum number of lines in a module
max-module-lines=2000

[pylint.basic]

# Good variable names which should always be accepted.
good-names=i,j,k,rr,fc,rq,fd,x,_

# Regular expression matching correct attribute names.
attr-rgx=([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$

# Regular expression matching correct method names.
method-rgx=[a-z_][a-zA-Z0-9_]{2,}$

[pylint.design]

# Maximum number of arguments for function / method
max-args=10

# Maximum number of locals for function / method body
max-locals=25

# Maximum number of return / yield for function / method body
max-returns=11

# Maximum number of branch for function / method body
max-branches=27

# Maximum number of statements in function / method body
max-statements=100

# Maximum number of attributes for a class (see R0902).
max-attributes=20

# Maximum number of public methods for a class (see R0904).
max-public-methods=25

[pylint.classes]

# List of valid names for the first argument in a metaclass class method.
valid-metaclass-classmethod-first-arg=mcs

[pylint.imports]

# Deprecated modules which should not be used, separated by a comma
deprecated-modules=regsub,TERMIOS,Bastion,rexec

[pylint.exceptions]

# Exceptions that will emit a warning when being caught.
overgeneral-exceptions=builtins.Exception

[pylint.deprecated_builtins]

# List of builtins function names that should not be used.
bad-functions=map,input


[mypy]
strict_optional = False
exclude = pymodbus/client/base.py

# below are those used in HomeAssistant
show_error_codes = true
# follow_imports = silent
# ignore_missing_imports = true
local_partial_types = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = ignore-without-code, redundant-self, truthy-iterable
disable_error_code = annotation-unchecked
strict_concatenate = false
# check_untyped_defs = true
# disallow_incomplete_defs = true
disallow_subclassing_any = true
# disallow_untyped_calls = true
disallow_untyped_decorators = true
# disallow_untyped_defs = true
# warn_return_any = true
warn_unreachable = true


[egg_info]
tag_svn_revision = false


[build-sphinx]
source-dir = doc/sphinx/
build-dir  = doc/sphinx/build
all_files  = 1


[upload_docs]
upload_dir = build/sphinx/html


[bdist_wheel]


[tool:pytest]
# log_cli = true
testpaths = test
addopts = -p no:warnings --dist loadgroup --numprocesses auto
asyncio_mode = auto
timeout = 40


[coverage:run]
include =
    pymodbus/
    test/
omit =
    test/TO_DO_REWRITE
    examples/common/tornado_twister
    examples/contrib/tornado_twister

[codespell]
skip=./doc/_build,./doc/source/_static,venv,.venv,.git,htmlcov,CHANGELOG.rst,.mypy_cache
ignore-words-list = asend
